# it_match

./: README.md
first-task/: Makefile  main.c  param.c
first-task/algorithms/: consistent.c  wave_parallel_block.c
first_task/: CMakeLists.txt  Makefile  README.md  common.c  consistent.c  main.c  param.c  wave_parallel_block.c
first_task/algorithms/: common.c  consistent.c  wave_parallel_block.c
fourth-task/: README.md  results.txt
fourth-task/src/: errors.py  main.py  sturm_liouville_problem.py  thomas_algorithm.py
second_task/: splines.mw
third-task/: README.md  pyproject.toml
third-task/images/compressed_images_msvd/: first_advanced.msvd  first_numpy.msvd  first_simple.msvd  fourth_advanced.msvd  fourth_numpy.msvd  fourth_simple.msvd  second_advanced.msvd  second_numpy.msvd  second_simple.msvd  third_advanced.msvd  third_numpy.msvd  third_simple.msvd
third-task/src/: main.py  params.py
third-task/src/compressor/: compressed_image.py  compressor.py  input_image.py  serialization.py
third-task/src/parser/: parser.py
third-task/src/svd/: svd.py  svd_result.py
